# financials

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .windsurfrules  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.gitpod/: automations.yaml
data/: test_chunks.json
docs/: datasets.md  journal.md  mock_data_room.md  plan.md  rag-io.md  weaviate.md
output/: balance_sheet_accounts payable_data.csv  balance_sheet_accounts receivable_data.csv  balance_sheet_assets_data.csv  balance_sheet_cash_data.csv  balance_sheet_debt_data.csv  balance_sheet_equity_data.csv  balance_sheet_liabilities_data.csv  cash_flow_operating cash flow_data.csv  cost_costs_data.csv  cost_data.csv  cost_expense_data.csv  cost_operating expenses_data.csv  cost_research and development_data.csv  financial_data_raw.csv  financial_entities_summary.csv  growth_data.csv  growth_growth_product_advertising products_data.csv  growth_growth_product_cloud platform_data.csv  growth_growth_region_emea_data.csv  growth_increase_data.csv  margin_operating margin_data.csv  performance_EPS_data.csv  profit_income_data.csv  profit_net income_data.csv  profit_operating income_data.csv  revenue_data.csv  revenue_data_analyzed.csv  revenue_data_raw.csv  revenue_revenue_business_unit_services_data.csv  revenue_revenue_product_revenue service_data.csv  revenue_revenue_product_ure services_data.csv  revenue_revenue_product_utilize services_data.csv  revenue_revenue_region_emea_data.csv  revenue_sales_data.csv
src/financials/: app.py
(+10 files in other folders)
