[project]
name = "financials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
author = "Yacin Bahi <yacin@red64.io>"
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "streamlit>=1.45.0",
    "unstructured[all-docs]>=0.17.2",
]
    